# flash-attention-v2

./: CMakeLists.txt
csrc/flash_attn/src/: flash_bwd_launch_template.h  flash_fwd_launch_template.h
